<resources>
    <string name="app_name">MapAedes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Tranduzido -->
    <string name="action_settings">Configurações</string>

    <string name="mapa">Mapa</string>
    <string name="add_casos">Adicionar Casos</string>
    <string name="casos_adicionados">Listar Adicionados</string>
    <string name="procurar_casos">Procurar</string>
    <string name="add_focos">Adicionar Focos</string>
    <string name="focos_adicionados">Listar Adicionados</string>
    <string name="procurar_focos">Procurar</string>
    <string name="informacoes">Informações</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="doenca">Doença</string>
    <string name="endereco">Endereço</string>
    <string name="login">Login</string>
    <string name="registrar_caso">Registrar caso</string>
    <string name="title_foco">Focos</string>
    <string name="title_casos">Casos</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_usuario">Nome de Usuário</string>
    <string name="senha">Senha</string>
    <string name="cidade">Cidade</string>
    <string name="pessoa">Pessoa</string>
    <string name="criar_conta">Não possui uma conta?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="sairFrag">Deseja sair?</string>
    <string name="sairFragCond">Caso saia, você será deslogado de sua conta</string>
    <string name="Rsenha">Senha</string>
    <string name="Login">Login</string>
    <string name="registre_se">Registre-se</string>
    <string name="dengue">Dengue</string>
    <string name="zika_virus">Zika vírus</string>
    <string name="chikungunya">Chikungunya</string>
    <string name="nyongnyong">Nyongnyong</string>
    <string name="guillaint_barre">Guillaint barré</string>
    <string name="mmarcadores">Marcadores</string>
    <string name="nav_title_dois">Casos e Focos</string>
    <string name="buscar">Buscar</string>
    <string name="resultado">Resultado</string>
    <string name="loc_atual">Localização Atual</string>

    <string-array name="users">
        <item>Médico</item>
        <item>Agente de Saúde</item>
    </string-array>

    <string-array name="doencas">
        <item>Dengue</item>
        <item>Zika vírus</item>
        <item>Chikungunya</item>
        <item>Nyongnyong</item>
        <item>Guillain barré</item>
    </string-array>

    <string-array name="pessoas">
        <item>Médico</item>
        <item>Agente de saúde</item>
        <item>Administrador</item>
    </string-array>


    <!-- Traduzir -->
    <string name="cadastrar">Cadastrar</string>
    <string name="search_list">Lista</string>
    <string name="search_grafico">Gráfico</string>
    <string name="search_mapa">Mapa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
