<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/mapa"/>
        <item
            android:id="@+id/nav_title_focos"
            android:title="@string/title_foco">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_addfoco"
                        android:icon="@drawable/ic_menu_add"
                        android:title="@string/add_focos"/>

                    <item
                        android:id="@+id/nav_listarfoco"
                        android:icon="@drawable/ic_menu_list"
                        android:title="@string/focos_adicionados"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_title_dois"
            android:title="@string/nav_title_dois">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_addcasos1"
                        android:icon="@drawable/ic_menu_add"
                        android:title="@string/add_casos"/>
                    <item
                        android:id="@+id/nav_addfocos1"
                        android:icon="@drawable/ic_menu_add"
                        android:title="@string/add_focos"/>

                    <item
                        android:id="@+id/nav_listarcasos1"
                        android:icon="@drawable/ic_menu_list"
                        android:title="@string/casos_adicionados"/>
                    <item
                        android:id="@+id/nav_listarfocos1"
                        android:icon="@drawable/ic_menu_list"
                        android:title="@string/focos_adicionados"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_title_casos"
            android:title="@string/title_casos">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_addcasos"
                        android:icon="@drawable/ic_menu_add"
                        android:title="@string/add_casos"/>

                    <item
                        android:id="@+id/nav_listarcasos"
                        android:icon="@drawable/ic_menu_list"
                        android:title="@string/casos_adicionados"/>

                </group>
            </menu>
        </item>

        <item
            android:id="@+id/nav_buscar"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/buscar"/>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/informacoes"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/configuracoes"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logoff"
            android:title="@string/sair"/>

    </group>

</menu>
