<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/marcadores"
            android:src="@mipmap/red"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:text="@string/dengue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView5"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/scrollView2"
            android:layout_toRightOf="@+id/scrollView2"
            android:src="@mipmap/blue"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2"
            android:text="@string/chikungunya"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="29dp"
            android:src="@mipmap/green"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView3"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/zika_virus"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_marginTop="37dp"
            android:layout_toEndOf="@+id/scrollView2"
            android:layout_toRightOf="@+id/scrollView2"
            android:src="@mipmap/orange"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView4"
            android:layout_toEndOf="@+id/imageView4"
            android:text="@string/nyongnyong"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView4"
            android:layout_marginTop="27dp"
            android:src="@mipmap/yellow"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView5"
            android:layout_toEndOf="@+id/imageView5"
            android:text="@string/guillaint_barre"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/marcadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scrollView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/mmarcadores"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#4d4c4c"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>

</RelativeLayout>