<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"

              android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nome_completo"
        android:textColor="#000"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>;


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nome_usuario"
        android:textColor="#000"
        android:id="@+id/textView6"
        android:layout_below="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/senha"
        android:textColor="#000"
        android:id="@+id/textView8"
        android:layout_above="@+id/textView9"
        android:layout_toRightOf="@+id/editText6"
        android:layout_below="@+id/editText6"/>

    <EditText
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:inputType="textPassword"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cidade"
        android:textColor="#000"
        android:id="@+id/textView9"
        android:layout_below="@+id/editText6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10"
        android:layout_weight="0.09"/>

    <EditText
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:hint="Campo Grande, MS"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/pessoa"
        android:textColor="#000"
        android:id="@+id/textView10"
        android:layout_below="@+id/add"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:entries="@array/pessoas"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="0.10"/>

    <Button
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="Confirmar"
        android:id="@+id/button3"
        android:onClick="CONFIRMAR"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"/>

    <!--  <AutoCompleteTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/add2"
          android:layout_below="@+id/textView9"
          android:layout_alignParentStart="true"
          android:layout_alignEnd="@+id/editText6" /> -->'

</LinearLayout>
