<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ed"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/ed"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="30dp"
        android:text="@string/endereco"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/ed"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:inputType="textPostalAddress"/>

    <!-- <CheckBox
        android:text="@string/loc_atual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3"
        android:id="@+id/checkBox"/> -->
    <Button
        android:id="@+id/button2"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/ed"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="94dp"
        android:background="@color/colorPrimary"
        android:onClick="ADICIONARFOCO"
        android:text="@string/add_focos" android:textColor="#fff"
        android:textSize="15sp" android:textStyle="bold"/>
    <Button
        android:id="@+id/locAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="45dp"
        android:onClick="LOCATUAL"
        android:text="@string/loc_atual"
    />


    <!--   <android.support.design.widget.FloatingActionButton
           android:id="@+id/fabFrag"
           android:src="@mipmap/current"
           app:elevation="6dp"
           app:pressedTranslationZ="12dp"
           android:layout_gravity="center_horizontal"
           android:layout_weight="0.06"
           android:layout_marginTop="32dp"
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:layout_below="@+id/ed" android:layout_alignLeft="@+id/button2"
           android:layout_alignStart="@+id/button2" android:layout_marginLeft="100dp"
           android:layout_marginStart="100dp"/>

        <ImageButton
           android:layout_width="65dp"
           android:layout_height="65dp"
           android:id="@+id/imageButton"
           android:background="@drawable/oval"
           android:elevation="10dp"
           android:src="@mipmap/current"
          android:fabSize="mini"
           android:layout_alignTop="@+id/editText7"
           android:layout_alignRight="@+id/RG"
           android:layout_alignEnd="@+id/RG" />-->


</RelativeLayout>

