<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#383737"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="35dp"
        android:textColor="#fff"
        android:theme="@style/MyEditTextTheme"/>

    <EditText
        android:id="@+id/login_pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="35dp"
        android:textColor="#fff"
        android:theme="@style/MyEditTextTheme"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/login_user"
        android:layout_alignLeft="@+id/login_user"
        android:layout_alignStart="@+id/login_user"
        android:layout_marginBottom="10dp"
        app:srcCompat="@mipmap/login_branco"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/login_pswd"
        android:layout_alignLeft="@+id/login_pswd"
        android:layout_alignStart="@+id/login_pswd"
        android:layout_marginBottom="10dp"
        app:srcCompat="@mipmap/senha_branco"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_button"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:text="@string/criar_conta"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/cadastro_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_button"
        android:background="#00ffffff"
        android:text="@string/cadastro"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_pswd"
        android:layout_marginTop="17dp"
        android:background="@color/colorAccent"
        android:onClick="LOGIN2"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView7"
        android:layout_marginBottom="46dp"
        android:layout_toEndOf="@+id/imageView7"
        android:layout_toRightOf="@+id/imageView7"
        android:text=" MapAedes"
        android:textColor="#fff"
        android:textSize="35sp"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/login_user"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        app:srcCompat="@mipmap/logozinha"/>


</RelativeLayout>